# tetris-cpp

./: .gitignore  CMakeLists.txt  README.md  block.cpp  block.h  blocks.cpp  cMakePresets.json  colors.cpp  colors.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  notes.txt  vcpkg.json
src/: block.cpp  block.h  colors.cpp  colors.h  game.cpp  game.h  grid.cpp  main.cpp
